--- a/model-load.html
+++ b/model-load.html
@@ -8,7 +8,7 @@
         body { margin: 0; }
     </style>
 
-    <script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
+    <!-- <script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
     <script type="importmap">
       {
         "imports": {
@@ -16,17 +16,17 @@
           "three/addons/": "https://unpkg.com/three@v0.155.0/examples/jsm/"
         }
       }
-    </script>
+    </script> -->
 
-    <!-- <script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
+    <script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
     <script type="importmap">
     {
         "imports": {
-            "three": "https://unpkg.com/three@0.141.0/build/three.module.js",
-            "three/addons/": "https://unpkg.com/three@0.141.0/examples/jsm/"
+            "three": "https://unpkg.com/three@0.129.0/build/three.module.js",
+            "three/addons/": "https://unpkg.com/three@0.129.0/examples/jsm/"
         }
     }
-    </script> -->
+    </script>
 </head>
 <body>
   <div id="loding" style="position: fixed; left: 85px; font-size: 12px;"></div>
@@ -59,18 +59,18 @@
             // objUrl: '/resources/models/obj/male02/male02.obj',
 
             // 스케치팝 샘플
-            mtlUrl: '/resources/models/obj/Sherb/obj.mtl',
-            objUrl: '/resources/models/obj/Sherb/tinker.obj',
+            // mtlUrl: '/resources/models/obj/Sherb/obj.mtl',
+            // objUrl: '/resources/models/obj/Sherb/tinker.obj',
             // mtlUrl: '/resources/models/obj/bugatti/bugatti.mtl',
             // objUrl: '/resources/models/obj/bugatti/bugatti.obj',
 
             // upfac 샘플
-            // const mtlUrl = '/resources/models/obj/room_obj/Room1.mtl';
-            // const objUrl = '/resources/models/obj/room_obj/Room1.obj';
-            // const mtlUrl = '/resources/models/obj/Museum/FileFormat/Museum.mtl';
-            // const objUrl = '/resources/models/obj/Museum/FileFormat/Museum.obj';
-            // const mtlUrl = '/resources/models/obj/Villa/FileFormat/Villa.mtl';
-            // const objUrl = '/resources/models/obj/Villa/FileFormat/Villa.obj';
+            mtlUrl: '/resources/models/obj/room_obj/Room1.mtl',
+            objUrl: '/resources/models/obj/room_obj/Room1.obj',
+            // mtlUrl: '/resources/models/obj/Museum/FileFormat/Museum.mtl',
+            // objUrl: '/resources/models/obj/Museum/FileFormat/Museum.obj',
+            // mtlUrl: '/resources/models/obj/Villa/FileFormat/Villa.mtl',
+            // objUrl: '/resources/models/obj/Villa/FileFormat/Villa.obj',
         }
     }
     new ModelLoadComponent(args);
