--- a/iframe.html
+++ b/iframe.html
@@ -1,26 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <style>
-        .iframeContainer {
-            position: relative;
-            width: 100%;
-        }
-        .iframeContainer iframe {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            top: 0;
-            left: 0;
-        }
-    </style>
-</head>
-<body>
+  </head>
+  <body>
     <div class="iframeContainer iframe16To9">
-        <iframe src="http://localhost:3000" allowfullscreen></iframe>
+      <iframe
+        src="http://localhost:3000/model-load?loadType=GLTF"
+        width="1000"
+        height="700"
+      ></iframe>
     </div>
-</body>
+  </body>
 </html>
