--- a/model-load.html
+++ b/model-load.html
@@ -1,36 +1,41 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
+    />
     <title>My first three.js app</title>
     <style>
-        body { margin: 0; }
+      body {
+        margin: 0;
+      }
 
-        .progress-bar-container {
-            position: absolute;
-            left: 50%;
-            top: 50%;
-            transform: translate(-50%, -50%);
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.8);
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-        }
+      .progress-bar-container {
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.8);
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+      }
 
-        #progress-bar {
-            width: 30%;
-            margin-top: 0.5%;
-            height: 2%;
-        }
+      #progress-bar {
+        width: 30%;
+        margin-top: 0.5%;
+        height: 2%;
+      }
 
-        label {
-            color: white;
-            font-size: 2rem;
-        }
+      label {
+        color: white;
+        font-size: 2rem;
+      }
     </style>
 
     <!-- <script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
@@ -43,73 +48,83 @@
       }
     </script> -->
 
-    <script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
+    <script
+      async
+      src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"
+    ></script>
     <script type="importmap">
-    {
+      {
         "imports": {
-            "three": "https://unpkg.com/three@0.148.0/build/three.module.js",
-            "three/addons/": "https://unpkg.com/three@0.148.0/examples/jsm/"
+          "three": "https://unpkg.com/three@0.148.0/build/three.module.js",
+          "three/addons/": "https://unpkg.com/three@0.148.0/examples/jsm/"
         }
-    }
+      }
     </script>
-</head>
-<body>
+  </head>
+  <body>
     <div class="progress-bar-container">
-        <label for="progress-bar">Loading...</label>
-        <progress id="progress-bar" value="0" max="100"></progress>
+      <label for="progress-bar">Loading...</label>
+      <progress id="progress-bar" value="0" max="100"></progress>
     </div>
-    <canvas id="canvas" width="700" height="500"></canvas>
+    <div id="canvasArea">
+      <canvas id="canvas"></canvas>
+    </div>
+
+    <!-- <button id="captureBtn">이미지 추출</button> -->
+    <!-- <div id="captureArea"></div> -->
 
     <script type="module">
-        import { ModelLoadComponent } from '/js/model-load/model-load-component.js';
+      import { ModelLoadComponent } from "/js/model-load/model-load-component.js";
 
-        const loadType = getParameter("loadType");
-        let args;
+      const loadType = getParameter("loadType");
+      let args;
 
-        if(loadType == 'GLTF') {
-            args = {
-                loadType: loadType,
-                url: '/resources/models/gltf/camel/scene.gltf'
-                // url: '/resources/models/gltf/shiba/scene.gltf'
-                // url: '/resources/models/gltf/cute_ghost/scene.gltf'
-            }
-        } else if(loadType == 'FBX') {
-            args = {
-                loadType: loadType,
-                url: '/resources/models/fbx/Martelo2.fbx'
-                // url: '/resources/models/fbx/Museum.fbx'
-                // url: '/resources/models/fbx/Ball Joint Doll Rigged Basemesh.fbx'
-            }
-        } else if(loadType == 'OBJ') {
-            args = {
-                loadType: loadType,
-                // three js 샘플
-                // mtlUrl: '/resources/models/obj/male02/male02.mtl',
-                // objUrl: '/resources/models/obj/male02/male02.obj',
+      if (loadType == "GLTF") {
+        args = {
+          loadType: loadType,
+          url: "/resources/models/gltf/camel/scene.gltf",
+          // url: '/resources/models/gltf/shiba/scene.gltf'
+          // url: '/resources/models/gltf/cute_ghost/scene.gltf'
+        };
+      } else if (loadType == "FBX") {
+        args = {
+          loadType: loadType,
+          url: "/resources/models/fbx/Martelo2.fbx",
+          // url: '/resources/models/fbx/Museum.fbx'
+          // url: '/resources/models/fbx/Ball Joint Doll Rigged Basemesh.fbx'
+        };
+      } else if (loadType == "OBJ") {
+        args = {
+          loadType: loadType,
+          // three js 샘플
+          // mtlUrl: '/resources/models/obj/male02/male02.mtl',
+          // objUrl: '/resources/models/obj/male02/male02.obj',
 
-                // 스케치팝 샘플
-                // mtlUrl: '/resources/models/obj/Sherb/obj.mtl',
-                // objUrl: '/resources/models/obj/Sherb/tinker.obj',
-                // mtlUrl: '/resources/models/obj/bugatti/bugatti.mtl',
-                // objUrl: '/resources/models/obj/bugatti/bugatti.obj',
+          // 스케치팝 샘플
+          // mtlUrl: '/resources/models/obj/Sherb/obj.mtl',
+          // objUrl: '/resources/models/obj/Sherb/tinker.obj',
+          // mtlUrl: '/resources/models/obj/bugatti/bugatti.mtl',
+          // objUrl: '/resources/models/obj/bugatti/bugatti.obj',
 
-                // upfac 샘플
-                // mtlUrl: '/resources/models/obj/room_obj/Room1.mtl',
-                // objUrl: '/resources/models/obj/room_obj/Room1.obj',
-                mtlUrl: '/resources/models/obj/Museum/FileFormat/Museum.mtl',
-                objUrl: '/resources/models/obj/Museum/FileFormat/Museum.obj',
-                // mtlUrl: '/resources/models/obj/Villa/FileFormat/Villa.mtl',
-                // objUrl: '/resources/models/obj/Villa/FileFormat/Villa.obj',
-            }
-        }
-        new ModelLoadComponent(args);
+          // upfac 샘플
+          // mtlUrl: '/resources/models/obj/room_obj/Room1.mtl',
+          // objUrl: '/resources/models/obj/room_obj/Room1.obj',
+          mtlUrl: "/resources/models/obj/Museum/FileFormat/Museum.mtl",
+          objUrl: "/resources/models/obj/Museum/FileFormat/Museum.obj",
+          // mtlUrl: '/resources/models/obj/Villa/FileFormat/Villa.mtl',
+          // objUrl: '/resources/models/obj/Villa/FileFormat/Villa.obj',
+        };
+      }
+      new ModelLoadComponent(args);
 
-        function getParameter(name) {
-            name = name.replace(/[\[]/, "\\[").replace(/[\]]/, "\\]");
-            var regex = new RegExp("[\\?&]" + name + "=([^&#]*)"),
-                results = regex.exec(location.search);
-            return results === null ? "" : decodeURIComponent(results[1].replace(/\+/g, " "));
-        }
+      function getParameter(name) {
+        name = name.replace(/[\[]/, "\\[").replace(/[\]]/, "\\]");
+        var regex = new RegExp("[\\?&]" + name + "=([^&#]*)"),
+          results = regex.exec(location.search);
+        return results === null
+          ? ""
+          : decodeURIComponent(results[1].replace(/\+/g, " "));
+      }
     </script>
-</body>
+  </body>
 </html>
